; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-message.c_message_free_last_container.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-message.c_message_free_last_container.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.bus_container = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @message_free_last_container to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @message_free_last_container(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.bus_container*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = call %struct.bus_container* @message_get_last_container(%struct.TYPE_4__* %4)
  store %struct.bus_container* %5, %struct.bus_container** %3, align 8
  %6 = load %struct.bus_container*, %struct.bus_container** %3, align 8
  %7 = getelementptr inbounds %struct.bus_container, %struct.bus_container* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @free(i32 %8)
  %10 = load %struct.bus_container*, %struct.bus_container** %3, align 8
  %11 = getelementptr inbounds %struct.bus_container, %struct.bus_container* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @free(i32 %12)
  %14 = load %struct.bus_container*, %struct.bus_container** %3, align 8
  %15 = getelementptr inbounds %struct.bus_container, %struct.bus_container* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @free(i32 %16)
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp sgt i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %1
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, -1
  store i64 %26, i64* %24, align 8
  br label %27

27:                                               ; preds = %22, %1
  ret void
}

declare dso_local %struct.bus_container* @message_get_last_container(%struct.TYPE_4__*) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
